# docs/swagger.json
@@ -37,6 +37,12 @@
                     },
                     {
                         "type": "string",
+                        "description": "Id Project",
+                        "name": "project_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "Tipe event",
                         "name": "event_type",
                         "in": "query"
@@ -254,6 +260,10 @@
                     "type": "string",
                     "example": "2026-09-17T08:00:00+07:00"
                 },
+                "project_id": {
+                    "type": "string",
+                    "example": "mahulu"
+                },
                 "request_id": {
                     "type": "string",
                     "example": "req-004"
@@ -296,6 +306,9 @@
                     "additionalProperties": {}
                 },
                 "occurred_at": {
+                    "type": "string"
+                },
+                "project_id": {
                     "type": "string"
                 },
                 "request_id": {
